src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__key_set_var_to_expr.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let a = {foo:0}
let k = "foo"
let v = 1
a[k] = v + v
}

OK
.fn @main
  params 0
  stack 5
  .locals
    a = r1
    k = r2
    v = r3
  .code
  0  ltable r1, 1
  1  lsmi r2, 0
  2  skeyc r1, "foo", r2
  3  lstr r2, "foo"
  4  lsmi r3, 1
  5  add r4, r3, r3
  6  sidx r1, r2, r4
  7  lnil r0
  8  ret
