src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__key_use.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
{}["foo"]

OK
.fn @main
  params 0
  stack 1
  .code
  0  ltable r0, 0
  1  lkeyc r0, r0, "foo"
  2  ret
