src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__key_use_var.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let k = do { 0 }
{}[k]

OK
.fn @main
  params 0
  stack 2
  .locals
    k = r1
  .code
  0  lsmi r1, 0
  1  ltable r0, 0
  2  lidx r0, r0, r1
  3  ret
