src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__list_empty.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
[]

OK
.fn @main
  params 0
  stack 1
  .code
  0  llist r0, 0
  1  ret
