src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__long_str.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
"
This string contains many characters.

At least this many should be enough to hit
the \"long string\" threshold, at which point
the full string will not be printed in disassembly.
"
}

OK
.fn @main
  params 0
  stack 1
  .code
  0  lstr r0, "\nThis string contains many characters.\n\nAt least t"...
  1  ret
