src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__loop_break.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
loop {
  let v = 0
  break
  let v = 1
}

OK
.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lsmi r1, 0
  1  jmp 1   ; to 2
  2  lnil r0
  3  ret
